profilelist1exp/unpackaged/objects/SFDC_Goals__c.object
<CustomObject>
    <fields>
        <fullName>Actions_Comments__c</fullName>
        <label>Actions / Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_Strategy__c</fullName>
        <label>Related To</label>
        <referenceTo>SFDC_Strategy__c</referenceTo>
        <relationshipLabel>Goals</relationshipLabel>
        <relationshipName>Strategy_Goals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Waiting on someone else</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Denied - No Resources Available</fullName>
                </value>
                <value>
                    <fullName>Denied - Out Of Scope</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Goals</label>
    <nameField>
        <label>Goal</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goals</pluralLabel>
    <recordTypes>
        <fullName>Open</fullName>
        <active>true</active>
        <label>Open</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>